; ModuleID = '/home/carl/AnghaBench/redis/src/extr_geohash_helper.c_geohashGetDistanceIfInRadiusWGS84.c'
source_filename = "/home/carl/AnghaBench/redis/src/extr_geohash_helper.c_geohashGetDistanceIfInRadiusWGS84.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @geohashGetDistanceIfInRadiusWGS84(double %0, double %1, double %2, double %3, double %4, double* %5) #0 {
  %7 = alloca double, align 8
  %8 = alloca double, align 8
  %9 = alloca double, align 8
  %10 = alloca double, align 8
  %11 = alloca double, align 8
  %12 = alloca double*, align 8
  store double %0, double* %7, align 8
  store double %1, double* %8, align 8
  store double %2, double* %9, align 8
  store double %3, double* %10, align 8
  store double %4, double* %11, align 8
  store double* %5, double** %12, align 8
  %13 = load double, double* %7, align 8
  %14 = load double, double* %8, align 8
  %15 = load double, double* %9, align 8
  %16 = load double, double* %10, align 8
  %17 = load double, double* %11, align 8
  %18 = load double*, double** %12, align 8
  %19 = call i32 @geohashGetDistanceIfInRadius(double %13, double %14, double %15, double %16, double %17, double* %18)
  ret i32 %19
}

declare dso_local i32 @geohashGetDistanceIfInRadius(double, double, double, double, double, double*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
